# Redcraft

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Redcraft.Core/: CMakeLists.txt
Redcraft.Core/Source/Private/HAL/: Memory.cpp
Redcraft.Core/Source/Public/: CoreMinimal.h  CoreTypes.h
Redcraft.Core/Source/Public/HAL/: Memory.h  Memory.inl  Platform.h
Redcraft.Core/Source/Public/Math/: MathUtility.h
Redcraft.Core/Source/Public/Misc/: AssertionMacros.h  CoreDefines.h
Redcraft.Core/Source/Public/Templates/: Alignment.h  MemoryOps.h  MemoryOps.inl  TypeTraits.h
Redcraft.Debug/: CMakeLists.txt
Redcraft.Debug/Source/: Main.cpp
Redcraft.Utility/: CMakeLists.txt
Redcraft.Utility.Test/: CMakeLists.txt
Redcraft.Utility/Public/Misc/: CoreDefines.h  PreprocessorHelpers.h
Redcraft.Utility/Source/Private/Memory/: Memory.cpp
Redcraft.Utility/Source/Private/Miscellaneous/: Console.cpp  FileSystem.cpp
Redcraft.Utility/Source/Private/Numeric/: Random.cpp
Redcraft.Utility/Source/Private/Testing/: Algorithms.cpp  AssertionMacrosTesting.cpp  ConceptsTesting.cpp  Containers.cpp  ContainersTesting.cpp  Iterator.cpp  IteratorTesting.cpp  Iterators.cpp  Memory.cpp  MemoryTesting.cpp  Miscellaneous.cpp  MiscellaneousTesting.cpp  Numeric.cpp  NumericTesting.cpp  Numerics.cpp  Range.cpp  Ranges.cpp  String.cpp  StringTesting.cpp  Strings.cpp  Templates.cpp  TemplatesTesting.cpp  TypeTraits.cpp  TypeTraitsTesting.cpp
Redcraft.Utility/Source/Public/: CoreTypes.h
Redcraft.Utility/Source/Public/Algorithms/: Algorithms.h  Basic.h  Search.h
Redcraft.Utility/Source/Public/Concepts/: Assignable.h  BooleanTestable.h  BuiltinType.h  Common.h  Comparable.h  Concepts.h  Constructible.h  Convertible.h  Derived.h  Destructible.h  Invocable.h  Objects.h  Same.h  Swappable.h
Redcraft.Utility/Source/Public/Containers/: Array.h  ArrayView.h  Bitset.h  Containers.h  Iterator.h  List.h  StaticArray.h  StaticBitset.h
Redcraft.Utility/Source/Public/Iterator/: BasicIterator.h  BidirectionalIterator.h  ContiguousIterator.h  CountedIterator.h  ForwardIterator.h  InsertIterator.h  Iterator.h  MoveIterator.h  RandomAccessIterator.h  ReverseIterator.h  Sentinel.h  Utility.h
Redcraft.Utility/Source/Public/Iterators/: BasicIterator.h  CountedIterator.h  InsertIterator.h  Iterators.h  MoveIterator.h  ReverseIterator.h  Sentinel.h
Redcraft.Utility/Source/Public/Memory/: Address.h  Alignment.h  Allocator.h  AllocatorInterface.h  DefaultAllocator.h  HeapAllocator.h  InOutPointer.h  Memory.h  MemoryOperator.h  ObserverPointer.h  PointerTraits.h  SharedPointer.h  UniquePointer.h
Redcraft.Utility/Source/Public/Misc/: AssertionMacros.h  CoreDefines.h  Platform.h
Redcraft.Utility/Source/Public/Miscellaneous/: AssertionMacros.h  BitwiseEnum.h  Compare.h  Console.h  ConstantIterator.h  CoreDefines.h  CoreMiscDefines.h  FileSystem.h  Iterator.h  Placeholders.h  Platform.h  ProgramSupport.h  Range.h  TypeInfo.h  VarArgs.h
Redcraft.Utility/Source/Public/Numeric/: Bit.h  Limits.h  Literal.h  Math.h  Numbers.h  Numeric.h  Random.h
Redcraft.Utility/Source/Public/Numerics/: Bit.h  Math.h  Numbers.h  Numerics.h  Random.h
Redcraft.Utility/Source/Public/Platform/: Platform.h
Redcraft.Utility/Source/Public/Range/: AllView.h  Conversion.h  Factory.h  FilterView.h  MoveView.h  Pipe.h  Range.h  TakeView.h  TakeWhileView.h  TransformView.h  Utility.h  View.h
Redcraft.Utility/Source/Public/Ranges/: AllView.h  Conversion.h  Factory.h  FilterView.h  MoveView.h  Pipe.h  Ranges.h  TakeView.h  TakeWhileView.h  TransformView.h  Utility.h  View.h
Redcraft.Utility/Source/Public/String/: CString.h  Char.h  Conversion.h.inl  String.h  StringView.h
Redcraft.Utility/Source/Public/Strings/: Char.h  Conversion.h.inl  Convert.h  Formatting.h  String.h  StringView.h
Redcraft.Utility/Source/Public/Templates/: Any.h  Atomic.h  Compare.h  Container.h  Function.h  IntegerSequence.h  Invoke.h  Meta.h  Noncopyable.h  Optional.h  Placeholders.h  PropagateConst.h  ReferenceWrapper.h  RetainedReference.h  ScopeHelper.h  SharedPointer.h  Templates.h  Tuple.h  TypeHash.h  UniquePointer.h  Utility.h  Variant.h
Redcraft.Utility/Source/Public/Testing/: AssertionMacrosTesting.h  ConceptsTesting.h  ContainersTesting.h  IteratorTesting.h  MemoryTesting.h  MiscellaneousTesting.h  NumericTesting.h  StringTesting.h  TemplatesTesting.h  Testing.h  TypeTraitsTesting.h
Redcraft.Utility/Source/Public/TypeTraits/: BitwiseOperations.h  BooleanTestable.h  Common.h  Comparable.h  CompositeType.h  CopyQualifiers.h  HelperClasses.h  InPlaceSpecialization.h  Invocable.h  Miscellaneous.h  Object.h  PrimaryType.h  SupportedOperations.h  Swappable.h  TypeProperties.h  TypeTraits.h
